manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
spec:
  type: NodePort
  ports:
  - name: http
    port: 8000
    targetPort: 8080
    protocol: TCP
  selector:
    app: api-gateway
